--- a/gui/BlogPicker.ui
+++ b/gui/BlogPicker.ui
@@ -72,7 +72,7 @@ border-radius: 20px;</string>
        <number>30</number>
       </property>
       <item>
-       <widget class="QListWidget" name="listWidget">
+       <widget class="QListWidget" name="ListBlogs">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -94,7 +94,7 @@ border-radius:10px;</string>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="Refreshbtn">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -123,7 +123,7 @@ padding: 0px 5px;</string>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="NewBlogbtn">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -152,7 +152,7 @@ background-color: rgb(5, 87, 163);</string>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_3">
+         <widget class="QPushButton" name="LoadBlogbtn">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
             <horstretch>0</horstretch>
