--- a/Resources/BlogManager.ui
+++ b/Resources/BlogManager.ui
@@ -6,100 +6,104 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>861</width>
-    <height>621</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <property name="autoFillBackground">
-   <bool>false</bool>
-  </property>
-  <property name="styleSheet">
-   <string notr="true"/>
-  </property>
   <widget class="QWidget" name="centralwidget">
-   <property name="autoFillBackground">
-    <bool>false</bool>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout_3">
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <property name="leftMargin">
+     <number>25</number>
+    </property>
+    <property name="rightMargin">
+     <number>25</number>
+    </property>
     <item>
-     <widget class="QLabel" name="label">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
       </property>
-      <property name="maximumSize">
+      <property name="sizeType">
+       <enum>QSizePolicy::Minimum</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
        <size>
-        <width>16777215</width>
-        <height>16777215</height>
+        <width>20</width>
+        <height>40</height>
        </size>
       </property>
-      <property name="font">
-       <font>
-        <pointsize>43</pointsize>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background: url(:/bg/background.png);
-background-position: bottom;
-margin-bottom: 10px;
-border-radius: 20px;</string>
-      </property>
-      <property name="text">
-       <string>Welcome to DanialCMS!</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
+     </spacer>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <property name="spacing">
-       <number>17</number>
-      </property>
-      <property name="leftMargin">
-       <number>30</number>
-      </property>
-      <property name="rightMargin">
-       <number>30</number>
-      </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <widget class="QListWidget" name="ListBlogs">
+       <widget class="QLabel" name="label">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>16777215</height>
-         </size>
+        <property name="font">
+         <font>
+          <pointsize>21</pointsize>
+         </font>
         </property>
+        <property name="styleSheet">
+         <string notr="true">background: url(:/bg/background.png);
+border-radius: 10px;
+padding: 5px 10px;</string>
+        </property>
+        <property name="text">
+         <string>Salaam</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_4">
         <property name="font">
          <font>
           <pointsize>15</pointsize>
          </font>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: #444;
-border-radius:10px;</string>
+         <string notr="true"/>
+        </property>
+        <property name="text">
+         <string>Manage Blog</string>
         </property>
        </widget>
       </item>
+     </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Minimum</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="spacing">
+       <number>19</number>
+      </property>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_2">
+       <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QPushButton" name="Refreshbtn">
+         <widget class="QPushButton" name="pushButton">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -109,7 +113,7 @@ border-radius:10px;</string>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>16777215</height>
+            <height>150</height>
            </size>
           </property>
           <property name="font">
@@ -123,12 +127,12 @@ border-radius: 10px;
 padding: 0px 5px;</string>
           </property>
           <property name="text">
-           <string>Refresh</string>
+           <string>New post</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="NewBlogbtn">
+         <widget class="QPushButton" name="pushButton_3">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -138,7 +142,7 @@ padding: 0px 5px;</string>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>16777215</height>
+            <height>150</height>
            </size>
           </property>
           <property name="font">
@@ -152,12 +156,12 @@ padding: 0px 5px;
 background-color: rgb(5, 87, 163);</string>
           </property>
           <property name="text">
-           <string>New Blog</string>
+           <string>Edit post</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="LoadBlogbtn">
+         <widget class="QPushButton" name="pushButton_2">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -167,7 +171,7 @@ background-color: rgb(5, 87, 163);</string>
           <property name="maximumSize">
            <size>
             <width>16777215</width>
-            <height>16777215</height>
+            <height>150</height>
            </size>
           </property>
           <property name="font">
@@ -176,18 +180,47 @@ background-color: rgb(5, 87, 163);</string>
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">background-color: #cf9904;
+           <string notr="true">background-color: rgb(216, 0, 4);
 border-radius: 10px;
 padding: 0px 5px;</string>
           </property>
           <property name="text">
-           <string>Load Blog</string>
+           <string>Delete Post</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
+      <item>
+       <widget class="QListWidget" name="listWidget">
+        <property name="font">
+         <font>
+          <pointsize>15</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: #444;
+border-radius:10px;</string>
+        </property>
+       </widget>
+      </item>
      </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Preferred</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
@@ -196,40 +229,22 @@ padding: 0px 5px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>861</width>
+     <width>800</width>
      <height>30</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFile">
+   <widget class="QMenu" name="menuFIle">
     <property name="title">
      <string>File</string>
     </property>
     <addaction name="actionQuit"/>
-    <addaction name="separator"/>
    </widget>
-   <widget class="QMenu" name="menuOptions">
-    <property name="title">
-     <string>Options</string>
-    </property>
-    <addaction name="actionMr_Ahmadi_Mode_2"/>
-   </widget>
-   <addaction name="menuFile"/>
-   <addaction name="menuOptions"/>
+   <addaction name="menuFIle"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionMr_Ahmadi_Mode">
-   <property name="text">
-    <string>Mr.Ahmadi Mode!</string>
-   </property>
-  </action>
   <action name="actionQuit">
    <property name="text">
     <string>Quit</string>
-   </property>
-  </action>
-  <action name="actionMr_Ahmadi_Mode_2">
-   <property name="text">
-    <string>Mr.Ahmadi Mode!</string>
    </property>
   </action>
  </widget>
