Added writer system

--- a/Resources/ShowPost.ui
+++ b/Resources/ShowPost.ui
@@ -63,6 +63,18 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QLabel" name="ShowPostWriter">
+        <property name="font">
+         <font>
+          <pointsize>15</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
