--- a/Server/Resources/EditCreatePost.ui
+++ b/Server/Resources/EditCreatePost.ui
@@ -54,6 +54,15 @@
        </widget>
       </item>
       <item>
+       <widget class="QLineEdit" name="EditCreateWhoCanRead">
+        <property name="font">
+         <font>
+          <pointsize>14</pointsize>
+         </font>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QPushButton" name="EditCreateCancelbtn">
