--- a/Client/Resources/BlogViewer.ui
+++ b/Client/Resources/BlogViewer.ui
@@ -15,70 +15,50 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
+    <property name="spacing">
+     <number>25</number>
+    </property>
     <property name="leftMargin">
+     <number>25</number>
+    </property>
+    <property name="topMargin">
      <number>25</number>
     </property>
     <property name="rightMargin">
      <number>25</number>
     </property>
-    <item>
-     <spacer name="verticalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Minimum</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
+    <property name="bottomMargin">
+     <number>25</number>
+    </property>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <widget class="QLabel" name="BlogTitle">
+       <widget class="QLabel" name="Title">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="font">
          <font>
-          <pointsize>21</pointsize>
+          <pointsize>43</pointsize>
          </font>
         </property>
         <property name="styleSheet">
          <string notr="true">background: url(:/bg/background.png);
-border-radius: 10px;
+border-radius: 20px;
 padding: 5px 10px;</string>
         </property>
         <property name="text">
-         <string>Salaam</string>
+         <string>Welcome to DanialCMS</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
         </property>
        </widget>
       </item>
      </layout>
-    </item>
-    <item>
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Minimum</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>28</height>
-       </size>
-      </property>
-     </spacer>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -88,7 +68,7 @@ padding: 5px 10px;</string>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QPushButton" name="ViewPost">
+         <widget class="QPushButton" name="ViewBlog">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -106,14 +86,37 @@ border-radius: 10px;
 padding: 0px 10px;</string>
           </property>
           <property name="text">
-           <string>View Post</string>
+           <string>View Blog</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="Subscribe">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>15</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">border-radius: 10px;
+padding: 0px 5px;
+background-color: rgb(5, 87, 163);</string>
+          </property>
+          <property name="text">
+           <string>Subscribe</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
-       <widget class="QListWidget" name="PostList">
+       <widget class="QListWidget" name="BlogList">
         <property name="font">
          <font>
           <pointsize>15</pointsize>
@@ -126,22 +129,6 @@ border-radius:10px;</string>
        </widget>
       </item>
      </layout>
-    </item>
-    <item>
-     <spacer name="verticalSpacer_3">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Preferred</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
     </item>
    </layout>
   </widget>
@@ -158,7 +145,7 @@ border-radius:10px;</string>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="../Resources/bg.qrc"/>
+  <include location="bg.qrc"/>
  </resources>
  <connections/>
 </ui>
