--- a/Client/Resources/BlogViewer.ui
+++ b/Client/Resources/BlogViewer.ui
@@ -15,50 +15,70 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
-    <property name="spacing">
-     <number>25</number>
-    </property>
     <property name="leftMargin">
-     <number>25</number>
-    </property>
-    <property name="topMargin">
      <number>25</number>
     </property>
     <property name="rightMargin">
      <number>25</number>
     </property>
-    <property name="bottomMargin">
-     <number>25</number>
-    </property>
+    <item>
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Minimum</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <widget class="QLabel" name="Title">
+       <widget class="QLabel" name="BlogTitle">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="font">
          <font>
-          <pointsize>43</pointsize>
+          <pointsize>21</pointsize>
          </font>
         </property>
         <property name="styleSheet">
          <string notr="true">background: url(:/bg/background.png);
-border-radius: 20px;
+border-radius: 10px;
 padding: 5px 10px;</string>
         </property>
         <property name="text">
-         <string>Welcome to DanialCMS</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <string>Salaam</string>
         </property>
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Minimum</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>28</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -68,7 +88,7 @@ padding: 5px 10px;</string>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QPushButton" name="ViewBlog">
+         <widget class="QPushButton" name="ViewPost">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
             <horstretch>0</horstretch>
@@ -86,37 +106,14 @@ border-radius: 10px;
 padding: 0px 10px;</string>
           </property>
           <property name="text">
-           <string>View Blog</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="Subscribe">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="font">
-           <font>
-            <pointsize>15</pointsize>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">border-radius: 10px;
-padding: 0px 5px;
-background-color: rgb(5, 87, 163);</string>
-          </property>
-          <property name="text">
-           <string>Subscribe</string>
+           <string>View Post</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
-       <widget class="QListWidget" name="BlogList">
+       <widget class="QListWidget" name="PostList">
         <property name="font">
          <font>
           <pointsize>15</pointsize>
@@ -129,6 +126,22 @@ border-radius:10px;</string>
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <spacer name="verticalSpacer_3">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Preferred</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
@@ -145,7 +158,7 @@ border-radius:10px;</string>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="bg.qrc"/>
+  <include location="../Resources/bg.qrc"/>
  </resources>
  <connections/>
 </ui>
